# haskell-flipdots

./: .ghci  .gitignore  Example.hs  FlipdotsWeb.hs  flipdots.cabal  stack.yaml
resources/: app.js  index.html  style.css
src/Graphics/: Flipdots.hs
