name:                flipdots
version:             0.1.0.0
synopsis:            Control the flipdots display in OpenLab Augsburg!
-- description:         
homepage:            https://github.com/timjb/haskell-flipdots
license:             MIT
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Graphics.Flipdots
  build-depends:       base >= 4.6 && < 4.8,
                       network >= 2.6 && < 2.7,
                       word8 >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
