name:                flipdots
version:             0.1.0.0
synopsis:            Control the Flipdots display in OpenLab Augsburg!
-- description:         
homepage:            https://github.com/timjb/haskell-flipdots
license:             MIT
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
copyright:           2015 (c) Tim Baumann
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10
data-dir:            resources
data-files:          index.html app.js style.css

library
  exposed-modules:     Graphics.Flipdots
  build-depends:       base >= 4.6 && < 4.9,
                       network >= 2.6 && < 2.7,
                       word8 >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11,
                       aeson >= 0.7.0.6 && < 0.9
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable flipdots-web
  build-depends:
    base,
    flipdots,
    engine-io,
    yesod-core,
    yesod-static,
    engine-io-yesod,
    socket-io,
    optparse-applicative,
    stm,
    bytestring,
    transformers,
    aeson
  other-modules:       Paths_flipdots
  main-is:             FlipdotsWeb.hs
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
